examples/neg/captures.effekt
def fn() at {} = println("hello") // ERROR Not allowed {io}
